// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WScatter Should be render correctly 1`] = `
<g>
  <!---->
  <g>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="0" cartesianIndex="0" trigger="hover" x="4000" y="2400" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2300" hoverRadius="2300" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2400" z="2300" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="1" cartesianIndex="0" trigger="hover" x="3000" y="2210" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="1398" hoverRadius="1398" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2210" z="1398" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="2" cartesianIndex="0" trigger="hover" x="9800" y="2200" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="100" hoverRadius="100" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2200" z="100" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="3" cartesianIndex="0" trigger="hover" x="2780" y="3908" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2000" hoverRadius="2000" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="3908" z="2000" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="4" cartesianIndex="0" trigger="hover" x="1890" y="4800" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="1700" hoverRadius="1700" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="4800" z="1700" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="5" cartesianIndex="0" trigger="hover" x="2390" y="3800" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2500" hoverRadius="2500" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="3800" z="2500" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="6" cartesianIndex="0" trigger="hover" x="3490" y="4300" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2100" hoverRadius="2100" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="4300" z="2100" opacity="0.8"></WDot-stub>
  </g>
</g>
`;

exports[`Components/WScatter Shouldn be render with line 1`] = `
<g>
  <WSpread-stub axis="x" transition="all 1s ease">
    <path d="M1890,4800L2390,3800L2780,3908L3000,2210L3490,4300L4000,2400L9800,2200" fill="none" stroke="#48c0b6" strokeWidth="1" strokeDasharray="0" style="transition: all 250ms ease;"></path>
  </WSpread-stub>
  <g>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="0" cartesianIndex="0" trigger="hover" x="4000" y="2400" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2300" hoverRadius="2300" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2400" z="2300" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="1" cartesianIndex="0" trigger="hover" x="3000" y="2210" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="1398" hoverRadius="1398" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2210" z="1398" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="2" cartesianIndex="0" trigger="hover" x="9800" y="2200" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="100" hoverRadius="100" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="2200" z="100" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="3" cartesianIndex="0" trigger="hover" x="2780" y="3908" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2000" hoverRadius="2000" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="3908" z="2000" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="4" cartesianIndex="0" trigger="hover" x="1890" y="4800" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="1700" hoverRadius="1700" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="4800" z="1700" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="5" cartesianIndex="0" trigger="hover" x="2390" y="3800" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2500" hoverRadius="2500" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="3800" z="2500" opacity="0.8"></WDot-stub>
    <WDot-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" index="6" cartesianIndex="0" trigger="hover" x="3490" y="4300" fill="#48c0b6" stroke="#48c0b6" strokeWidth="0" radius="2100" hoverRadius="2100" info="[object Object]" styles="[object Object]" transition="all 250ms ease" value="4300" z="2100" opacity="0.8"></WDot-stub>
  </g>
</g>
`;

exports[`Components/WScatter Shouldn't be render 1`] = `undefined`;
